--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://rear0146.github.io/9PFM1hooked",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build && gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
